syntax = "proto3";

option go_package = "./recorder";
package recorder;

// Event message definition.
message StartRecordRequest {
  string voiceChannelId = 1;
  string roll20GameId = 2;
}

message StartRecordReply {
  bool discord = 1;
  bool roll20 = 2;
}

message StopRecordRequest {
  string voiceChannelId = 1;
  string roll20GameId = 2;
}

message StopRecordReply {
  repeated string discordKeys = 1;
  string roll20Key = 2;
}

service RecordService {
  rpc Start(StartRecordRequest) returns (StartRecordReply);
  rpc Stop(StopRecordRequest) returns (StopRecordReply);
}